--- a/ch11.ajax/src/main/webapp/WEB-INF/web.xml
+++ b/ch11.ajax/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="6.0">
   <servlet>
     <description></description>
     <display-name>AjaxController1</display-name>
@@ -21,32 +21,62 @@
   </welcome-file-list>
   <servlet>
     <description></description>
-    <display-name>AjaxServletidCheck</display-name>
-    <servlet-name>AjaxServletidCheck</servlet-name>
-    <servlet-class>ajax01.AjaxServletidCheck</servlet-class>
+    <display-name>AjaxServletIdCheck</display-name>
+    <servlet-name>AjaxServletIdCheck</servlet-name>
+    <servlet-class>ajax01.AjaxServletIdCheck</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>AjaxServletidCheck</servlet-name>
-    <url-pattern>/idCheck.me</url-pattern>
+    <servlet-name>AjaxServletIdCheck</servlet-name>
+    <url-pattern>/ajax01/idCheck.me</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>ajaxcontrol3</display-name>
-    <servlet-name>ajaxcontrol3</servlet-name>
-    <servlet-class>ajaxcontrol3</servlet-class>
+    <display-name>AjaxServletController3</display-name>
+    <servlet-name>AjaxServletController3</servlet-name>
+    <servlet-class>ajax01.AjaxServletController3</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ajaxcontrol3</servlet-name>
-    <url-pattern>/ajax3.do</url-pattern>
+    <servlet-name>AjaxServletController3</servlet-name>
+    <url-pattern>/ajax01/ajax3.do</url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>AjaxServletController4</display-name>
     <servlet-name>AjaxServletController4</servlet-name>
-    <servlet-class>AjaxServletController4</servlet-class>
+    <servlet-class>ajax01.AjaxServletController4</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>AjaxServletController4</servlet-name>
-    <url-pattern>/ajax4.do</url-pattern>
+    <url-pattern>/ajax01/ajax4.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AjaxServletController5</display-name>
+    <servlet-name>AjaxServletController5</servlet-name>
+    <servlet-class>ajax01.AjaxServletController5</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AjaxServletController5</servlet-name>
+    <url-pattern>/ajax01/ajax5.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ajax</display-name>
+    <servlet-name>ajax</servlet-name>
+    <servlet-class>ajax</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ajax</servlet-name>
+    <url-pattern>/ajaxReply/rist.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ajaxddd</display-name>
+    <servlet-name>ajaxddd</servlet-name>
+    <servlet-class>ajax01.ajaxddd</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ajaxddd</servlet-name>
+    <url-pattern>/ajaxReply/rlnsert.bo</url-pattern>
   </servlet-mapping>
 </web-app>
